--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "DATABASE_URL=mongodb://localhost/movies-dev PORT=3000 SECRET=secret nodemon src/server.js"
+    "start:dev": "DATABASE_URL=mongodb://localhost/movies-dev PORT=3000 SECRET=secret nodemon src/server.js",
+    "test:watch": "nodemon --exec \"mocha tests/**/*test.js || exit 1\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "chai": "^4.1.2",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mocha": "^5.2.0",
