--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "DATABASE_URL=mongodb://localhost/movies-dev PORT=3000 SECRET=secret nodemon src/server.js",
+    "test": "mocha tests/**/*test.js",
     "test:watch": "nodemon --exec \"mocha tests/**/*test.js || exit 1\""
   },
   "author": "",
